dnl Process this file with autoconf to produce a configure script.

AC_INIT([lua-xpath], [0.0.1], [alecdu@gmail.com])
AM_INIT_AUTOMAKE([-Wall])

AC_MSG_NOTICE([configuring for lua-xpath $PACKAGE_VERSION])

AM_CONFIG_HEADER(config.h)

AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_LIBTOOL

AC_CHECK_HEADERS(string.h)


AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
